fix(app): fix spacing

--- a/app/src/components/Chrome/CenterView/CenterView.scss
+++ b/app/src/components/Chrome/CenterView/CenterView.scss
@@ -8,6 +8,6 @@
     color: $color-white;
 
     .rpa-View {
-        margin-top: 36px;
+        margin-top: 24px;
     }
 }
