--- a/app/src/components/Core/Field/FieldGroup/FieldGroup.scss
+++ b/app/src/components/Core/Field/FieldGroup/FieldGroup.scss
@@ -19,7 +19,7 @@
     }
 
     .rpa-Field + .rpa-Field {
-        margin-top: 36px;
+        margin-top: 24px;
     }
 
     &:not(.rpa-FieldGroup--has-title) {
